#11 remove repetition, change helper method name

--- a/app/views/currencies/index.html.haml
+++ b/app/views/currencies/index.html.haml
@@ -12,6 +12,6 @@
       %tr
         %td= currency.uuid
         %td= currency.created_at
-        %td= boolean_icon currency.ack1
-        %td= boolean_icon currency.ack2
-        %td= boolean_icon currency.ack3
+        %td= ack_status_icon currency.ack1
+        %td= ack_status_icon currency.ack2
+        %td= ack_status_icon currency.ack3
